# A_system_to_ensure_the_integrity_of_Internet_of_things_by_using_Blockchain

./: README.md
youngseokcoin/src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  (+92 more)
youngseokcoin/src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_youngseokcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
youngseokcoin/src/bench/data/: block413567.raw
youngseokcoin/src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
youngseokcoin/src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
youngseokcoin/src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
youngseokcoin/src/crypto/ctaes/: README.md
youngseokcoin/src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
youngseokcoin/src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
youngseokcoin/src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  (+69 more)
youngseokcoin/src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
youngseokcoin/src/qt/locale/: youngseokcoin_af.ts  youngseokcoin_af_ZA.ts  youngseokcoin_ar.ts  youngseokcoin_be_BY.ts  youngseokcoin_bg.ts  youngseokcoin_bg_BG.ts  youngseokcoin_bn.ts  youngseokcoin_bs.ts  youngseokcoin_ca.ts  youngseokcoin_ca@valencia.ts  youngseokcoin_ca_ES.ts  youngseokcoin_cs.ts  youngseokcoin_cy.ts  youngseokcoin_da.ts  youngseokcoin_de.ts  youngseokcoin_de_DE.ts  youngseokcoin_el.ts  youngseokcoin_el_GR.ts  youngseokcoin_en.ts  youngseokcoin_en_AU.ts  youngseokcoin_en_GB.ts  youngseokcoin_en_US.ts  youngseokcoin_eo.ts  youngseokcoin_es.ts  youngseokcoin_es_419.ts  youngseokcoin_es_AR.ts  youngseokcoin_es_CL.ts  youngseokcoin_es_CO.ts  youngseokcoin_es_DO.ts  youngseokcoin_es_ES.ts  youngseokcoin_es_MX.ts  youngseokcoin_es_UY.ts  youngseokcoin_es_VE.ts  youngseokcoin_et.ts  youngseokcoin_et_EE.ts  youngseokcoin_eu_ES.ts  youngseokcoin_fa.ts  youngseokcoin_fa_IR.ts  youngseokcoin_fi.ts  youngseokcoin_fr.ts  (+61 more)
youngseokcoin/src/qt/res/: youngseokcoin-qt-res.rc
youngseokcoin/src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  wallettests.cpp  wallettests.h
youngseokcoin/src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
youngseokcoin/src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  youngseokcoinconsensus.cpp  youngseokcoinconsensus.h
youngseokcoin/src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
youngseokcoin/src/secp256k1/contrib/: lax_der_parsing.h
youngseokcoin/src/secp256k1/src/: tests.c
youngseokcoin/src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
youngseokcoin/src/support/allocators/: secure.h  zeroafterfree.h
youngseokcoin/src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  (+22 more)
youngseokcoin/src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
youngseokcoin/src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+344 files in other folders)
